tests/fixtures/invalid/pow_list_bool_float.py
# Cannot call pow() with List[int], Bool, Float
x = pow([1, 2, 3], True, 1.0)
